--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prod": "vue-cli-service build --dest ./temp && rm -rf ./dist && mv ./temp ./dist",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "node scripts/gh-pages-deploy.js",
+    "deploy": "node scripts/gh-pages-deploy.mjs",
     "clean": "rm -rf node_modules && npm cache clean --force"
   },
   "dependencies": {
